feat(time-math): add times for time math

--- a/src/components/dc-addsub-equation/dc-addsub-equation.scss
+++ b/src/components/dc-addsub-equation/dc-addsub-equation.scss
@@ -10,3 +10,9 @@
   border: 0;
   border-bottom: 1px solid silver;
 }
+
+:host i {
+  font-style: normal;
+  background-color: silver;
+  box-shadow: -4px 0 0 silver;
+}
